--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  --lightCyan: hsl(193, 38%, 86%);
+  --neonGreen: hsl(150, 100%, 66%);
+  --grayishBlue: hsl(217, 19%, 38%);
+  --darkGrayishBlue: hsl(217, 19%, 24%);
+  --darkBlue: hsl(218, 23%, 16%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+body {
+  background-color: hsl(218, 23%, 16%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding-inline: 2rem;
 }
 
 .card {
-  padding: 2em;
+  background-color: hsl(217, 19%, 24%);
+  max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  border-radius: 15px;
+  padding: 3rem 2rem 4.5rem 2rem;
+  position: relative;
 }
 
-.read-the-docs {
-  color: #888;
+.card span {
+  color: hsl(150, 100%, 66%);
+
+  letter-spacing: 3px;
+  font-weight: 800;
+  font-size: 12px;
+}
+
+.card p {
+  font-size: 28px;
+  text-align: center;
+  color: hsl(193, 38%, 86%);
+}
+
+.card button {
+  background: hsl(150, 100%, 66%);
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -1.8rem;
+}
+
+.card button:hover {
+  box-shadow: 0px 0px 40px 0px rgba(83, 255, 169, 1);
+  transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
+.divider-mobile {
+  display: none;
+}
+
+@media (max-width: 500px) {
+  .divider-desktop {
+    display: none;
+  }
+  .divider-mobile {
+    display: block;
+  }
 }
